src/test/resources/tests/typeError/structFetch.qg

init {
    1.fieldName
}

run true

input(a,b) true
